# ChangeLog for x11-drivers/xf86-input-hyperpen
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-hyperpen/ChangeLog,v 1.50 2011/06/29 12:44:52 chithanh Exp $

*xf86-input-hyperpen-1.4.0 (29 Jun 2011)

  29 Jun 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xf86-input-hyperpen-1.4.0.ebuild:
  Version bump.

  23 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -xf86-input-hyperpen-1.1.0.ebuild, -xf86-input-hyperpen-1.2.0.ebuild:
  rm

  15 Dec 2009; Brent Baude <ranger@gentoo.org>
  xf86-input-hyperpen-1.3.0.ebuild:
  Marking xf86-input-hyperpen-1.3.0 ppc64 stable for bug 294958

  15 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  xf86-input-hyperpen-1.3.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #282290

  26 Oct 2009; Jeroen Roovers <jer@gentoo.org>
  xf86-input-hyperpen-1.3.0.ebuild:
  Stable for HPPA (bug #282290).

  11 Oct 2009; nixnut <nixnut@gentoo.org> xf86-input-hyperpen-1.3.0.ebuild:
  ppc stable #282290

  09 Oct 2009; Markus Meier <maekke@gentoo.org>
  xf86-input-hyperpen-1.3.0.ebuild:
  arm stable, bug #282290

  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  xf86-input-hyperpen-1.3.0.ebuild:
  x86 stable, bug 282290

  30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  xf86-input-hyperpen-1.3.0.ebuild:
  amd64 stable wrt #282290

  23 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  xf86-input-hyperpen-1.3.0.ebuild:
  Stable on alpha for xorg-server-1.5/xorg-x11-7.4

  15 May 2009; Raúl Porcel <armin76@gentoo.org>
  xf86-input-hyperpen-1.2.0.ebuild:
  arm stable

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org>
  xf86-input-hyperpen-1.2.0.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  xf86-input-hyperpen-1.2.0.ebuild:
  ia64/sh stable wrt #251832

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  xf86-input-hyperpen-1.2.0.ebuild:
  Stable on sparc, bug #251832
