@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-input-mouse
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-mouse/ChangeLog,v 1.106 2011/04/18 11:28:13 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-mouse/ChangeLog,v 1.107 2011/07/06 20:49:31 chithanh Exp $
+
+*xf86-input-mouse-1.7.1 (06 Jul 2011)
+
+  06 Jul 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +xf86-input-mouse-1.7.1.ebuild:
+  Version bump.
 
   18 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org>
   -xf86-input-mouse-1.6.0.ebuild:
