@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-input-hyperpen
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-hyperpen/ChangeLog,v 1.50 2011/06/29 12:44:52 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-hyperpen/ChangeLog,v 1.51 2011/07/06 20:49:53 chithanh Exp $
+
+*xf86-input-hyperpen-1.4.1 (06 Jul 2011)
+
+  06 Jul 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  -xf86-input-hyperpen-1.4.0.ebuild, +xf86-input-hyperpen-1.4.1.ebuild:
+  Version bump.
 
 *xf86-input-hyperpen-1.4.0 (29 Jun 2011)
 
